# mr-log

./: .gitignore  ChangeLog.md  README.md  mr-log.cabal  package.yaml
src/System/IO/: MrLog.hs
