cabal-version: 2.20

name: mr-log
version: 0.1.0.0
description:
  A fistfull of Haskell functions for printing log info and, in one case, also
  exiting with error. For more info see the README on GitHub at
  <https://github.com/githubuser/mr-log#readme>.
homepage: https://github.com/meowgorithm/mr-log#readme
bug-reports: https://github.com/meowgorithm/mr-log/issues
license: MIT
license-file: LICENSE
author: Christian Rocha
maintainer: christian@rocha.is
copyright: 2020 Christian Rocha
build-type: Simple
extra-source-files: ChangeLog.md, README.md

source-repository head
  type: git
  location: https://github.com/meowgorithm/mr-log

library
  default-language: Haskell2010
  exposed-modules: System.IO.MrLog
  hs-source-dirs: src
  build-depends:
    base >=4.7 && <5
  ghc-options:
    -Wall
